Cập nhập giảm giá, thêm đa ngôn ngữ, thêm chức năng trả hàng, tối ưu code, tối ưu css, cập nhập admin